@@ -57,11 +57,11 @@ char *timeToStr(time_t t, char *buf=NULL)
    char *b = buf ? buf : buf2;
 
    if (t<3600)
-       sprintf(b,"%lds (%dm %2ds)", (long)(t), int(t/60L), int(t%60L));
+       sprintf(b,"%lds (%dm %02ds)", (long)(t), int(t/60L), int(t%60L));
    else if (t<86400)
-       sprintf(b,"%lds (%dh %2dm)", (long)(t), int(t/3600L), int((t%3600L)/60L));
+       sprintf(b,"%lds (%dh %02dm)", (long)(t), int(t/3600L), int((t%3600L)/60L));
    else
-       sprintf(b,"%lds (%dd %2dh)", (long)(t), int(t/86400L), int((t%86400L)/3600L));
+       sprintf(b,"%lds (%dd %02dh)", (long)(t), int(t/86400L), int((t%86400L)/3600L));
 
    return b;
 }
@@ -308,6 +308,7 @@ void TCmdenvApp::makeOptionsEffective()
 void TCmdenvApp::simulate()
 {
     startClock();
+    clock_t clock_start = clock();
     sigint_received = false;
     try
     {
@@ -332,8 +333,9 @@ void TCmdenvApp::simulate()
                          );
                    if (opt_eventbanner_details)
                    {
-                       ::fprintf(fout, "   Elapsed: %s   Messages: created: %ld  present: %ld  in FES: %d\n",
+                       ::fprintf(fout, "   Elapsed: %s   Clock: %lu   Messages: created: %ld  present: %ld  in FES: %d\n",
                                timeToStr(totalElapsed()),
+                               (unsigned long)(clock()-clock_start),
                                cMessage::totalMessageCount(),
                                cMessage::liveMessageCount(),
                                simulation.msgQueue.length());
