@@ -7,7 +7,10 @@ otherwise one doesn't know total duration and number of processed events!
 	    event-banner-details= true/false (default: false).
 	It is in effect with normal mode (express-run=false), and causes
         elapsed time and number of messages (created,present, in FES) to be 
-        printed in a second line below the event banner.
+        printed in a second line below the event banner. Format:
+           Elapsed: 131s (2m 11s)   Clock: 131830   Messages: created: 45  
+           present: 45  in FES: 18
+        Clock is the value returned by the clock() C function (in "ticks").
         Also changed the format of elapsed time display in express mode:
         prints it in seconds as well.
 
